--- a/public/css/show.css
+++ b/public/css/show.css
@@ -9,7 +9,6 @@
 }
 
 .post {
-    border-bottom: 1px solid #333;
     padding: 10px;
     margin-top: 20px;
 }
@@ -24,8 +23,6 @@
 
 .title {
     display: inline-block;
-    font-size: 1.3rem;
-    font-weight: bold;
     background:linear-gradient(transparent 60%, rgba(160, 124, 196, 0.6) 0%);
 }
 
@@ -51,4 +48,28 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.comment-item {
+    margin-top: 15px;
+}
+
+#preview {
+    margin-top: 10px;
+}
+
+.preview {
+    width: 200px;
+    height: 150px;
+    object-fit: contain;
+}
+
+.preview + .preview {
+    margin-left: 10px;
+}
+
+.submit {
+    margin-top: 10px;
+    padding: 5px 10px;
+    border: 1px solid #333;
 }
