--- a/public/css/works.css
+++ b/public/css/works.css
@@ -92,6 +92,14 @@
     border: 1px solid #333;
 }
 
+.delete {
+    position: absolute;
+    bottom: 22%;
+    right: 2.5%;
+    padding: 5px;
+    border: 1px solid #333;
+}
+
 .modal-img-box {
     width: 600px;
     height: 350px;
