--- a/public/css/works.css
+++ b/public/css/works.css
@@ -68,7 +68,7 @@
     top: 5%;
     transform: translate(-50%, 0);
     border: 1px solid #333;
-    background-color: rgb(240, 240, 240);
+    background-color: #fff;
 }
 
 .close {
