--- a/public/css/header.css
+++ b/public/css/header.css
@@ -38,18 +38,15 @@ li {
     margin-left: 20px;
 }
 
+.loginout:hover {
+    color: rgb(220, 220, 220);
+}
+
 .side {
     position: fixed;
     top: 72px;
     width: 18%;
     height: 100vh;
-}
-
-.content {
-    margin: 100px 30px 20px 20%;
-}
-
-.side {
     border-top: 1px solid rgb(160, 124, 196);
     background-color: rgb(63,14,64);
     color: #fff;
@@ -59,24 +56,43 @@ li {
 .side ul {
     margin-top: 30px;
     text-align: center;
-    padding: 10px;
+}
+
+.side ul li {
+    width: 100%;
+    height: 48px;
 }
 
 .side ul li a {
+    line-height: 48px;
+    display: inline-block;
     font-size: 1.1rem;
+    width: 100%;
+    height: 100%;
 }
 
-.side ul li + li {
-    margin-top: 15px;
+.side ul li a:hover {
+    background-color: rgb(40, 11, 41);
 }
 
 .create {
     margin-top: 50px !important;
 }
 
+.content {
+    margin: 100px 30px 20px 20%;
+}
+
 .page-ttl {
     font-size: 1.5rem;
     font-weight: bold;
+    color: #fff;
+    padding: 5px 10px;
+    background-color: rgb(63,14,64);
+}
+
+.search-box {
+    margin: 15px 0 0 10px;
 }
 
 .paginate {
