--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -4,14 +4,17 @@
     padding: 3px;
 }
 
-.posts {
-    margin-top: 20px;
-}
-
 .post {
     border-bottom: 1px solid #333;
-    padding: 10px;
-    margin-top: 20px;
+    width: 100%;
+    text-align: left;
+    box-sizing: border-box;
+    padding: 20px;
+    margin-top: 30px;
+}
+
+.post:hover {
+    background-color: rgb(245, 245, 245);
 }
 
 .post pre {
@@ -31,4 +34,8 @@
 
 .name {
     font-size: 0.9rem;
+}
+
+.problem {
+    font-weight: bold;
 }
