--- a/public/css/works.css
+++ b/public/css/works.css
@@ -84,20 +84,23 @@
 .edit {
     position: absolute;
     bottom: 30%;
-    right: 2.5%;
+    right: 7%;
 }
 
-.edit a {
-    padding: 5px;
-    border: 1px solid #333;
+.edit a:hover {
+    color: rgb(63,14,64);
+    text-decoration: underline;
 }
 
 .delete {
     position: absolute;
-    bottom: 22%;
+    bottom: 30%;
     right: 2.5%;
-    padding: 5px;
-    border: 1px solid #333;
+}
+
+.delete:hover {
+   color: rgb(63,14,64);
+    text-decoration: underline; 
 }
 
 .modal-img-box {
