--- a/public/css/works.css
+++ b/public/css/works.css
@@ -61,7 +61,7 @@
 
 .modal-pos {
     text-align: center;
-    padding: 20px 30px 30px;
+    padding: 20px 15px 15px;
     width: 900px;
     position: fixed;
     left: 50%;
@@ -69,6 +69,7 @@
     transform: translate(-50%, 0);
     border: 1px solid #333;
     background-color: #fff;
+    border-radius: 10px;
 }
 
 .close {
@@ -83,7 +84,7 @@
 
 .edit {
     position: absolute;
-    bottom: 30%;
+    top: 58%;
     right: 7%;
 }
 
@@ -94,7 +95,7 @@
 
 .delete {
     position: absolute;
-    bottom: 30%;
+    top: 58%;
     right: 2.5%;
 }
 
@@ -125,10 +126,28 @@
     width: 48%;
 }
 
+.work-content-ttl {
+    font-weight: bold;
+}
+
+.box {
+    width: 100%;
+    height: 150px;
+    overflow-y: scroll;
+    background-color: rgb(245, 245, 245);
+}
+
 .text {
     text-align: left;
     width: 100%;
-    max-height: 200px;
+}
+
+.work-txt {
+    padding: 10px;
+}
+
+.language {
+    background-color: rgb(245, 245, 245);
 }
 
 .btn-pos {
@@ -146,4 +165,11 @@
 .btn-pos div a {
     padding: 5px 15px;
     border: 1px solid #333;
+}
+
+.work-link {
+    color: #fff;
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: rgb(63,14,64);
 }
